--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,21 +29,24 @@
     <string name="verification_code">Verification code</string>
     <string name="login">Login</string>
     <string name="input_your_phone_number">Input your phone number</string>
-    <string name="countdown">Countdown</string>
+    <string name="date">Expiry date</string>
     <string name="post_product_discount">Post product discount</string>
     <string name="upvote">66</string>
     <string name="_8">8</string>
     <string name="_30">30</string>
-    <string name="countdown_days">Countdown days: " "</string>
+    <string name="date_view">Expiry date: " "</string>
     <string name="shop_name">Shop Name:" "</string>
     <string name="discount_off">Discount:" "</string>
     <string name="integer">%d</string>
-    <string name="onCancelled">Oops......something is wrong</string>
+    <string name="error">something is wrong</string>
     <string name="off">% off</string>
     <string name="scan_product">Scan Product</string>
     <string name="brand_r">Brand:" "</string>
     <string name="capacity_r">Capacity:" "</string>
     <string name="product_name_r">Product name:" "</string>
     <string name="barcode">Barcode</string>
-    <!--<string name="Int">%s ★"</string>>-->
+    <string name="input_error">Input error</string>
+    <string name="input_success">Input success</string>
+    <string name="input_invalid">Input is invalid</string>
+    <string name="discount_invalid">Discount number is invalid</string>
 </resources>
