--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,9 @@
     <string name="databaseError">Database Error</string>
     <string name="barcodeDetection">Receive Detections:</string>
     <string name="select_date">"  "Select Date</string>
+    <string name="no_barcode">No barcode found</string>
     <string name="space">"  "</string>
+    <string name="empty">""</string>
     <string name="slash">/</string>
 
 </resources>
