--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="input_success">Input success</string>
     <string name="input_invalid">Input is invalid</string>
     <string name="barcode_exist">Barcode exist</string>
-    <string name="discount_invalid">Discount number is invalid</string>
+    <string name="discount_invalid">Discount number or expiry date is invalid</string>
     <string name="sign_out">Sign out</string>
     <string name="user_name">user name</string>
     <string name="user_email">user email</string>
